--- a/index.html
+++ b/index.html
@@ -384,17 +384,12 @@
 
     <!-- Banner 1 -->
     <a href="#" target="_blank">
-      <img src="https://whbdistributors.com/brands/mightyutan/flight_oct2025/header_1.jpg"
+      <img src="https://raw.githubusercontent.com/nash150202/WHB_link/refs/heads/main/image/legoBanner.png"
            alt="LEGO Mighty Utan Banner 1"
            class="banner">
     </a>
 
     <!-- Banner 2 -->
-    <a href="#" target="_blank">
-      <img src="https://whbdistributors.com/brands/mightyutan/flight_oct2025/header_2.jpg"
-           alt="LEGO Mighty Utan Banner 2"
-           class="banner">
-    </a>
 
     <main class="leaderboard-content">
       <div class="leaderboard-title">🏆 Daily Updated Store Performance 🏆</div>
@@ -445,3 +440,4 @@
   </script>
 </body>
 </html>
+
