--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>LEGO Mighty Utan Leaderboard | Mighty Utan Sdn Bhd</title>
+  <!-- favicon -->
+    <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/LEGO_logo.svg/1200px-LEGO_logo.svg.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font (LEGO-like bold blocky style) -->
@@ -440,4 +442,5 @@
   </script>
 </body>
 </html>
+
 
