--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>LEGO Mighty Utan Leaderboard | Mighty Utan Sdn Bhd</title>
   <!-- favicon -->
-    <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/LEGO_logo.svg/1200px-LEGO_logo.svg.png">
+  <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/LEGO_logo.svg/1200px-LEGO_logo.svg.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font (LEGO-like bold blocky style) -->
@@ -49,7 +49,6 @@
       color: var(--text-dark);
     }
 
-    /* LEGO floating blocks background */
     .lego-block {
       position: fixed;
       width: 80px;
@@ -73,118 +72,23 @@
       background: inherit;
     }
 
-    .lego-block::before {
-      left: 10px;
-    }
-
-    .lego-block::after {
-      right: 10px;
-    }
-
     /* Individual blocks – more quantity + variation */
-    .lego-block.block1 {
-      background: #ff0000;
-      left: 5%;
-      bottom: -90px;
-      animation-duration: 24s;
-      animation-delay: 0s;
-      transform: scale(1);
-    }
-
-    .lego-block.block2 {
-      background: #ffcf00;
-      left: 18%;
-      bottom: -120px;
-      animation-duration: 20s;
-      animation-delay: -4s;
-      transform: scale(0.9);
-    }
-
-    .lego-block.block3 {
-      background: #0076e6;
-      left: 32%;
-      bottom: -150px;
-      animation-duration: 26s;
-      animation-delay: -8s;
-      transform: scale(1.1);
-    }
-
-    .lego-block.block4 {
-      background: #0bb34c;
-      left: 46%;
-      bottom: -110px;
-      animation-duration: 23s;
-      animation-delay: -2s;
-      transform: scale(0.85);
-    }
-
-    .lego-block.block5 {
-      background: #ff7b00;
-      left: 60%;
-      bottom: -140px;
-      animation-duration: 27s;
-      animation-delay: -10s;
-      transform: scale(1.05);
-    }
-
-    .lego-block.block6 {
-      background: #ff0000;
-      left: 73%;
-      bottom: -100px;
-      animation-duration: 21s;
-      animation-delay: -6s;
-      transform: scale(0.8);
-    }
-
-    .lego-block.block7 {
-      background: #ffcf00;
-      left: 84%;
-      bottom: -130px;
-      animation-duration: 25s;
-      animation-delay: -12s;
-      transform: scale(1.15);
-    }
-
-    .lego-block.block8 {
-      background: #0076e6;
-      left: 12%;
-      bottom: -200px;
-      animation-duration: 30s;
-      animation-delay: -14s;
-      transform: scale(0.75);
-    }
-
-    .lego-block.block9 {
-      background: #0bb34c;
-      left: 52%;
-      bottom: -210px;
-      animation-duration: 28s;
-      animation-delay: -16s;
-      transform: scale(1.2);
-    }
-
-    .lego-block.block10 {
-      background: #ff7b00;
-      left: 90%;
-      bottom: -180px;
-      animation-duration: 32s;
-      animation-delay: -18s;
-      transform: scale(0.9);
-    }
+    .lego-block.block1 { background: #ff0000; left: 5%; bottom: -90px; animation-duration: 24s; animation-delay: 0s; }
+    .lego-block.block2 { background: #ffcf00; left: 18%; bottom: -120px; animation-duration: 20s; animation-delay: -4s; }
+    .lego-block.block3 { background: #0076e6; left: 32%; bottom: -150px; animation-duration: 26s; animation-delay: -8s; }
+    .lego-block.block4 { background: #0bb34c; left: 46%; bottom: -110px; animation-duration: 23s; animation-delay: -2s; }
+    .lego-block.block5 { background: #ff7b00; left: 60%; bottom: -140px; animation-duration: 27s; animation-delay: -10s; }
+    .lego-block.block6 { background: #ff0000; left: 73%; bottom: -100px; animation-duration: 21s; animation-delay: -6s; }
+    .lego-block.block7 { background: #ffcf00; left: 84%; bottom: -130px; animation-duration: 25s; animation-delay: -12s; }
+    .lego-block.block8 { background: #0076e6; left: 12%; bottom: -200px; animation-duration: 30s; animation-delay: -14s; }
+    .lego-block.block9 { background: #0bb34c; left: 52%; bottom: -210px; animation-duration: 28s; animation-delay: -16s; }
+    .lego-block.block10 { background: #ff7b00; left: 90%; bottom: -180px; animation-duration: 32s; animation-delay: -18s; }
 
     @keyframes floatUp {
-      0% {
-        transform: translateY(0) translateX(0) scale(1);
-      }
-      40% {
-        transform: translateY(-40vh) translateX(20px) scale(1.05);
-      }
-      70% {
-        transform: translateY(-75vh) translateX(-10px) scale(0.95);
-      }
-      100% {
-        transform: translateY(-110vh) translateX(10px) scale(1);
-      }
+      0% { transform: translateY(0) translateX(0) scale(1); }
+      40% { transform: translateY(-40vh) translateX(20px) scale(1.05); }
+      70% { transform: translateY(-75vh) translateX(-10px) scale(0.95); }
+      100% { transform: translateY(-110vh) translateX(10px) scale(1); }
     }
 
     .leaderboard-container {
@@ -245,15 +149,15 @@
       border: none;
       outline: none;
       border-radius: 999px;
-      background: #ffffff;
+      background: #444444; /* Dark grey background */
       padding: 4px 10px;
       display: flex;
       align-items: center;
       gap: 5px;
       font-size: 0.75rem;
       font-weight: 600;
-      color: #333;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.25);
+      color: #f5f5f5; /* Light text color */
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Subtle shadow */
     }
 
     .toggle-btn span {
@@ -261,54 +165,19 @@
     }
 
     body.dark-mode .toggle-btn {
-      background: #2c2c2c;
-      color: #f5f5f5;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.7);
+      background: #555555; /* Slightly lighter grey in dark mode */
     }
 
-    .banner {
-      width: 100%;
-      display: block;
+    body.dark-mode .theme-toggle {
+      background: #333333; /* Dark grey background for the menu */
+      border-radius: 6px;
+      padding: 4px 10px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); /* Light shadow */
     }
 
-    .leaderboard-content {
-      padding: 24px 20px 26px;
-      text-align: center;
-    }
-
-    .leaderboard-title {
-      font-size: 1.6rem;
-      font-weight: 700;
-      color: inherit;
-      margin-bottom: 6px;
-    }
-
-    .leaderboard-subtitle {
-      font-size: 0.95rem;
-      color: #666666;
-      margin-bottom: 18px;
-    }
-
-    body.dark-mode .leaderboard-subtitle {
-      color: #bbbbbb;
-    }
-
-    .iframe-wrapper {
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.12);
-    }
-
-    iframe {
-      width: 100%;
-      height: 1200px;
-      border: none;
-      display: block;
-      background: #ffffff;
-    }
-
-    body.dark-mode iframe {
-      background: #111;
+    body.dark-mode .footer {
+      background: rgba(255, 255, 255, 0.02);
+      border-top-color: rgba(255, 255, 255, 0.06);
     }
 
     /* Footer */
@@ -319,11 +188,6 @@
       color: inherit;
       font-size: 0.85rem;
       border-top: 1px solid rgba(0, 0, 0, 0.04);
-    }
-
-    body.dark-mode .footer {
-      background: rgba(255, 255, 255, 0.02);
-      border-top-color: rgba(255, 255, 255, 0.06);
     }
 
     /* Responsive tweaks */
@@ -442,5 +306,3 @@
   </script>
 </body>
 </html>
-
-
