--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     }
 
     body.dark-mode .leaderboard-container {
-      background: var(--card-dark);
+      background: #333333; /* Dark grey background */
       box-shadow: 0 10px 40px rgba(0, 0, 0, 0.6);
     }
 
@@ -306,3 +306,4 @@
   </script>
 </body>
 </html>
+
