--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     }
 
     body.dark-mode .leaderboard-container {
-      background: var(--card-dark);
+      background: #333333;
       box-shadow: 0 10px 40px rgba(0, 0, 0, 0.6);
     }
 
@@ -442,3 +442,4 @@
   </script>
 </body>
 </html>
+
