--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     }
 
     body.dark-mode .leaderboard-container {
-      background: #4A4A4A;
+      background: #2E2E2E;
       box-shadow: 0 10px 40px rgba(0, 0, 0, 0.6);
     }
 
@@ -442,6 +442,7 @@
   </script>
 </body>
 </html>
+
 
 
 
